<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TODO</string>
    <string name="title_menu_1">Home</string>
    <string name="title_menu_2">Zadania</string>
    <string name="title_menu_3">Listy</string>
    <string name="title_menu_4">Synchronizuj</string>
    <string name="action_add">Add</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="button_save">Zapisz</string>
    <string name="task_name">Zadanie</string>
    <string name="task_description">Opis zadanie</string>
    <string name="category">Lista</string>
    <string name="task_tab_1">Nieukonczone</string>
    <string name="task_tab_2">Ukonczone</string>

</resources>