<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_1"
        android:icon="@android:drawable/ic_media_pause"
        android:showAsAction="never"
        android:title="@string/title_menu_1"/>
    <item
        android:id="@+id/menu_2"
        android:icon="@android:drawable/ic_media_pause"
        android:showAsAction="never"
        android:title="@string/title_menu_2"/>
    <item
        android:id="@+id/menu_3"
        android:icon="@android:drawable/ic_media_pause"
        android:showAsAction="never"
        android:title="@string/title_menu_3"/>
    <item
        android:id="@+id/menu_4"
        android:icon="@android:drawable/ic_media_pause"
        android:showAsAction="never"
        android:title="@string/title_menu_4"/>
</menu>